feat: websocket을 이용한 클라이언트 사이드 - 서버 연결 확인 및 메세지 send 확인

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "GIF 웹 소켓 채팅방",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app"
   },
   "author": "seilylook",
   "license": "ISC",
@@ -14,6 +15,10 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "ws": "^8.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
