--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "nunjucks": "^3.2.3",
+    "socket.io": "^4.6.0",
     "ws": "^8.12.0"
   },
   "devDependencies": {
