--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "seilylook",
   "license": "ISC",
   "dependencies": {
+    "color-hash": "^2.0.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nunjucks": "^3.2.3",
     "socket.io": "^4.6.0",
     "ws": "^8.12.0"
